# ai4plasma

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
ai4plasma/: __init__.py  config.py
ai4plasma/core/: __init__.py  model.py  network.py
ai4plasma/operator/: __init__.py  deepcsnet.py  deeponet.py
ai4plasma/piml/: __init__.py  cs_pinn.py  geo.py  meta_pinn.py  nas_pinn.py  pinn.py  rk_pinn.py
ai4plasma/plasma/: __init__.py  arc.py  prop.py
ai4plasma/utils/: __init__.py  common.py  device.py  io.py  math.py
app/operator/deepcsnet/: predict_total_ionxsec.py
app/operator/deeponet/: solve_1d_poisson.py  solve_1d_poisson_batch.py  solve_1d_poisson_test.py  solve_2d_poisson.py  solve_2d_poisson_cnn.py
app/piml/cs_pinn/: resume_1d_arc_transient_cs_pinn.py  solve_1d_arc_steady_cs_pinn.py  solve_1d_arc_transient_cs_pinn.py  solve_1d_arc_transient_noV_cs_pinn.py
app/piml/meta_pinn/: solve_1d_arc_steady_meta_pinn.py
app/piml/nas_pinn/: search_pinn_2d_poisson.py
app/piml/pinn/: solve_1d_pinn.py  solve_2d_poly_pinn.py  solve_2d_rect_pinn.py
app/piml/rk_pinn/: solve_1d_corona_rk_pinn.py
app/plasma/arc/: solve_1d_arc_steady.py  solve_1d_arc_transient_explicit.py  solve_1d_arc_transient_noV.py
app/readme/: example1.py  example2.py
docs/: requirements.txt
docs/source/: conf.py  index.md
docs/source/api/: core.md  index.md  operator.md  piml.md  plasma.md  utils.md
docs/source/dev/: index.md
docs/source/examples/: index.md  operator.md  piml.md  plasma.md
docs/source/guides/: basic_concepts.md  configuration.md  piml.md  (+6 more)
(+103 files in other folders)
